Fixed toggle break on animation

--- a/animism-site/src/styles/global.css
+++ b/animism-site/src/styles/global.css
@@ -132,13 +132,16 @@
 /* only when <html> has the class theme-transition */
 html.theme-transition {
   transition:
-    background-color var(--transition-duration) var(--transition-ease),
-    color            var(--transition-duration) var(--transition-ease);
+  transform        var(--transition-duration) var(--transition-ease), 
+  background-color var(--transition-duration) var(--transition-ease),
+  color            var(--transition-duration) var(--transition-ease),
+  border-color     var(--transition-duration) var(--transition-ease);
 }
 
 /* and all its descendants */
 html.theme-transition * {
   transition:
+    transform        var(--transition-duration) var(--transition-ease), 
     background-color var(--transition-duration) var(--transition-ease),
     color            var(--transition-duration) var(--transition-ease),
     border-color     var(--transition-duration) var(--transition-ease);
